# burn

./: Cargo.toml
.github/workflows/: test.yml
bitnet/: Cargo.toml
bitnet/src/: burn_model.rs  lib.rs  main.rs  model.rs  model_float.rs
bitnet/src/data/: batcher.rs
crates/burn-autodiff/src/ops/: tensor.rs
crates/burn-core/src/nn/: bit_linear.rs  mod.rs
crates/burn-core/src/nn/attention/: bit_mha.rs  mod.rs
crates/burn-core/src/nn/bit_transformer/: decoder.rs  encoder.rs  pwff.rs
crates/burn-core/src/nn/norm/: layer.rs
crates/burn-fusion/src/ops/: float.rs
crates/burn-fusion/src/stream/: context.rs  operation.rs
crates/burn-jit/src/codegen/dialect/gpu/: operation.rs  vectorization.rs
crates/burn-jit/src/fusion/tracing/: builder.rs
crates/burn-jit/src/ops/: float_ops.rs
crates/burn-ndarray/src/: element.rs
crates/burn-ndarray/src/ops/: tensor.rs
crates/burn-tch/src/ops/: base.rs  tensor.rs
crates/burn-tensor/src/tensor/api/: numeric.rs
crates/burn-tensor/src/tensor/ops/: tensor.rs
crates/burn-wgpu/src/compiler/wgsl/: compiler.rs  instructions.rs
examples/text-generation/: Cargo.toml
examples/text-generation/examples/: text-generation-infer.rs  text-generation.rs
examples/text-generation/src/: inference.rs  lib.rs  model.rs  training.rs
wyburn/: Cargo.toml
wyburn/src/: lib.rs
wyburn/src/nn/: gray_encoding.rs  grayceful_encoding.rs  mod.rs  order_gate.rs
